# rpicam-tui

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
rpicam_tui/: __init__.py  app.py  command_builder.py  field_specs.py  history.py  presets.py  runner.py  widgets.py
rpicam_tui/presets/: default-still.json  default-video.json  vehicle-mount.json
tests/: test_command_builder.py
