[project]
name = "rpicam-tui"
version = "0.1.1"
description = "Interactive Textual TUI for building and running rpicam-still/rpicam-vid commands"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.60.0",
]

[project.scripts]
rpicam-tui = "rpicam_tui.app:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpicam_tui"]
